k8s/flask/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - image: justhynd/flask-app-devops:etc
          name: flask-app
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 128Mi
              cpu: "0.2"
          volumeMounts:
            - mountPath: "/etc/secrets/"
              name: db-password-secret
              readOnly: true
      
      volumes:
        - name: db-password-secret
          secret:
            secretName: secret-data
