k8s/flask/flask-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/metrics'
    prometheus.io/port: '5000'
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - name: flask
      port: 5000
      targetPort: 5000
      protocol: TCP
